fix: del overflow-x on container

--- a/style.css
+++ b/style.css
@@ -22,7 +22,6 @@ body {
 .container {
   display: flex;
   width: 100%;
-  overflow-x: hidden;
 }
 .container-left {
   width: 45%;
